--- a/qBittorrent/config/qBittorrent.conf
+++ b/qBittorrent/config/qBittorrent.conf
@@ -15,7 +15,7 @@ Advanced\AnonymousMode=false
 Advanced\IgnoreLimitsLAN=false
 Advanced\LtTrackerExchange=true
 Advanced\RecheckOnCompletion=true
-Bittorrent\AddTrackers=false
+Bittorrent\AddTrackers=true
 Bittorrent\MaxRatio=-1
 Bittorrent\MaxRatioAction=0
 Bittorrent\MaxConnecs=-1
